messaging_app/messaging_app/blue_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: messaging-app-blue
spec:
  replicas: 1
  selector:
    matchLabels:
      app: messaging-app
      version: blue
  template:
    metadata:
      labels:
        app: messaging-app
        version: blue
    spec:
      containers:
        - name: messaging-container
          image: lameckirungu/messaging-app:2.0
          ports:
          - containerPort: 8000
