messaging_app/messaging_app/green_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: messaging-app-green
spec:
  replicas: 1
  selector:
    matchLabels:
      app: messaging-app
      version: green
  template:
    metadata:
      labels:
        app: messaging-app
        version: green
    spec:
      containers:
        - name: messaging-container
          image: lameckirungu/messaging-app:latest
          ports:
          - containerPort: 8000
