messaging_app/messaging_app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: messaging-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: messaging-app
  template:
    metadata:
      labels:
        app: messaging-app
    spec:
      containers:
        - name: messaging-container
          image: lameckirungu/messaging-app:latest
          ports:
          - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: messaging-service
spec:
  type: ClusterIP
  selector:
    app: messaging-app
  ports:
    - port: 80
      targetPort: 8000
