messaging_app/messaging_app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  app: messaging-ingress

spec:
  rules:
    - http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: messaging-service
              port:
                number: 80
